# ozifi

./: .gitignore  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
contrib/c-ares/: CMakeLists.txt  ares__get_hostent.c  ares_free_hostent.c  ares_ipv6.h  ares_private.h  ares_setup.h  ares_writev.h  setup_once.h
contrib/cpptemplate/: CMakeLists.txt  LICENSE.txt  README.rst  cpptempl.cpp  cpptempl.h
contrib/cryptopp/: CMakeLists.txt  files.txt
contrib/distorm/: CMakeLists.txt
contrib/google/: CMakeLists.txt
contrib/google/protobuf/: CMakeLists.txt  config.h  config.h.bk  files.txt
contrib/google/protobuf-compiler/: CMakeLists.txt  code_generator.cc  command_line_interface.cc  files.txt  importer.cc  importer.h  main.cc  mock_code_generator.h  parser.cc  plugin.cc  plugin.pb.cc  plugin.pb.h  subprocess.cc  test_plugin.cc  zip_writer.cc
contrib/google/protobuf-compiler/cpp/: cpp_enum.cc  cpp_enum.h  cpp_enum_field.cc  cpp_enum_field.h  cpp_extension.cc  cpp_extension.h  cpp_field.cc  cpp_field.h  cpp_file.cc  cpp_file.h  cpp_generator.cc  cpp_generator.h  cpp_helpers.cc  cpp_message.cc  cpp_message.h  cpp_message_field.cc  cpp_message_field.h  cpp_primitive_field.cc  (+5 more)
contrib/gtest/: CMakeLists.txt  files.txt
contrib/hiredis/: CMakeLists.txt
contrib/html_entities/: CMakeLists.txt  entities.c  entities.h
contrib/htmlcxx/: CMakeLists.txt  README
contrib/htmlcxx/html/: CMakeLists.txt  Node.cc  utils.cc
contrib/json/: CMakeLists.txt
contrib/leveldb/: CMakeLists.txt  db.h
contrib/leveldb/db/: builder.h  db_impl.cc  db_impl.h  db_iter.cc  dbformat.h  filename.h  log_reader.cc  log_reader.h  log_writer.h  memtable.cc  memtable.h  repair.cc  snapshot.h  table_cache.cc  table_cache.h  version_set.cc  write_batch_internal.h
contrib/leveldb/port/: mman.cc  mman.h  port.h  port_posix.h
contrib/leveldb/table/: block.cc  block_builder.h  format.cc  table.cc  table_builder.cc
contrib/leveldb/util/: coding.h  comparator.cc  env_boost.cc  getpid.cc  logging.cc  options.cc  status.cc  win_logger.cc
contrib/lib_json/: CMakeLists.txt  json_reader.cpp  json_value.cpp  json_writer.cpp
contrib/libcaptcha/: CMakeLists.txt  libcaptcha.c
contrib/libcurl/: CMakeLists.txt  connect.c  curl_addrinfo.c  curl_setup.h  curl_setup_once.h  file.c  formdata.c  ftp.c  ftplistparser.c  hostip.c  hostip4.c  inet_ntop.c  inet_pton.c  libs.txt  nonblock.c  select.c  sockaddr.h  warnless.c
contrib/libnatpmp/: CMakeLists.txt  declspec.h  getgateway.c  getgateway.h  natpmp.c  natpmp.h  natpmpc.c  wingettimeofday.c  wingettimeofday.h
contrib/libogg/: ogg.h  os_types.h
contrib/libspeex/: CMakeLists.txt  arch.h  bits.c  buffer.c  cb_search.h  jitter.c  ltp.c  ltp.h  mdf.c  modes.h  nb_celp.c  nb_celp.h  preprocess.c  quant_lsp.h  resample.c  sb_celp.h  scal.c  skeleton.h  sources.txt  speex.h  speex_buffer.h  speex_callbacks.c  speex_echo.h  speex_header.c  speex_header.h  speex_jitter.h  speex_preprocess.h  speex_resampler.h  speex_stereo.h  speex_types.h  speexdec.c  speexenc.c  stereo.c  testdenoise.c  testecho.c  testenc.c  testenc_uwb.c  testenc_wb.c  testjitter.c  wav_io.c  (+1 more)
contrib/libvpx/: CMakeLists.txt  config.mk  libs-x86_64-linux-gcc.mk  vpx_config.h  vpxdec.c  vpxenc.c
contrib/libvpx/examples/: vp8_multi_resolution_encoder.c
contrib/libvpx/test/: datarate_test.cc
contrib/mongoose/: CMakeLists.txt  README  mongoose.c  mongoose.h
contrib/opus/: CMakeLists.txt  f
contrib/pe_bliss/: CMakeLists.txt
contrib/snappy/: CMakeLists.txt  Makefile  config.h  config.status  files.txt  libtool
contrib/udt4/: CMakeLists.txt  api.cpp  api.h  cache.cpp  ccc.h  channel.cpp  common.cpp  common.h  core.cpp  queue.cpp  queue.h  udt.h
projects/arbuzator/: CMakeLists.txt  data_remapper.cpp  data_remapper.h  import_remapper.cpp  import_remapper.h  instruction_remapper.cpp  instruction_remapper.h  main.cpp  rules.json
projects/space_capture/client/: CMakeLists.txt  application.cpp  application.h  bar-descriptor.xml  control.cpp  control.h  display.cpp  display.h  game.config  graphic_manager.cpp  graphic_manager.h  main.cpp  main_menu.cpp  main_menu.h  network.cpp  network.h  res.gpb  resources.qrc  space_capture-ios.plist  space_capture-macosx.plist  space_capture.vcxproj  space_capture_cli.pro  sphere.h  test1.vcxproj.filters  world.cpp  world.h  world_display.cpp  world_display.h
projects/space_capture/lib/: CMakeLists.txt  defines.h  space.h  space.proto  world.cpp  world.h
projects/space_capture/server/: CMakeLists.txt  game_server.cpp  game_server.h  main.cpp  network.cpp  network.h  world.cpp  world.h
projects/vocal/: CMakeLists.txt
projects/vocal/vocal_client_console/: CMakeLists.txt  main.cpp
projects/vocal/vocal_client_gui/: CMakeLists.txt  add_friend_window.cpp  add_friend_window.h  application.cpp  application.h  application.h.ET3288  audio.cpp  audio.h  chat_window.cpp  chat_window.h  login_window.cpp  login_window.h  main.cpp  main_window.cpp  main_window.h  statuses.qrc
projects/vocal/vocal_client_lib/: CMakeLists.txt  callback.h  client.cpp  client.h  conference.cpp  conference.h  config.h  friend.cpp  friend.h  message.h  opus.cpp  opus.h  state.h  state.proto
projects/vocal/vocal_lib/: CMakeLists.txt  client.h  compress.cpp  compress.h  crypto.cpp  crypto.h  defines.h  nat_pmp.cpp  nat_pmp.h  opus.cpp  resolver.cpp  resolver.h  serializer.cpp  serializer.h  server.cpp  server.h  utils.cpp  utils.h  vocal.h  vocal.proto
projects/vocal/vocal_lib_captcha/: CMakeLists.txt  main.cpp
projects/vocal/vocal_lib_ut/: CMakeLists.txt  tests.cpp
projects/vocal/vocal_server/: CMakeLists.txt  main.cpp
projects/vocal/vocal_server_lib/: CMakeLists.txt  server.cpp  server.h  server.proto  storage.cpp  storage.h  storage.proto  sync.cpp  sync.h  types.h
utils/: CMakeLists.txt  buffer.h  cast.cpp  cast.h  cinttypes.h  colonsep.cpp  colonsep.h  date_time.cpp  date_time.h  exception.cpp  iostream.cpp  iostream.h  locale_setter.cpp  locale_setter.h  network_address.h  pack.h  saveload.h  settings.cpp  settings.h  string.cpp  string.h  types.h  unused.h
(+86 files in other folders)
