add_subdirectory(mongoose)
add_subdirectory(libcurl)
add_subdirectory(lib_json)
add_subdirectory(json)
add_subdirectory(cpptemplate)
add_subdirectory(html_entities)
add_subdirectory(htmlcxx)
add_subdirectory(cimg)
add_subdirectory(hiredis)
add_subdirectory(jpeg)
add_subdirectory(lodepng)
add_subdirectory(stb_truetype)
add_subdirectory(leveldb)
add_subdirectory(udt4)
add_subdirectory(c-ares)