add_subdirectory(mongoose)
add_subdirectory(libcurl)
add_subdirectory(lib_json)
add_subdirectory(json)
add_subdirectory(cpptemplate)
add_subdirectory(html_entities)
add_subdirectory(htmlcxx)
add_subdirectory(hiredis)
add_subdirectory(jpeg)
add_subdirectory(lodepng)
add_subdirectory(leveldb)
add_subdirectory(udt4)
add_subdirectory(c-ares)
add_subdirectory(google)
add_subdirectory(snappy)
add_subdirectory(cryptopp)
add_subdirectory(gtest)
add_subdirectory(libcaptcha)
add_subdirectory(libnatpmp)
add_subdirectory(libspeex)
add_subdirectory(pe_bliss)
add_subdirectory(distorm)