add_library(gtest
                src/gtest-all.cc
                src/gtest-death-test.cc
                src/gtest-filepath.cc
                src/gtest-port.cc
                src/gtest-printers.cc
                src/gtest-test-part.cc
                src/gtest-typed-test.cc
                src/gtest.cc
                src/gtest_main.cc)
