
add_definitions(-DUSE_ALLOCA=1)
add_definitions(-DHAVE_CONFIG_H=1)

add_library (opus
A2NLSF.c
ana_filt_bank_1.c
analysis.c
apply_sine_window_FIX.c
apply_sine_window_FLP.c
autocorrelation_FLP.c
autocorr_FIX.c
bands.c
biquad_alt.c
burg_modified_FIX.c
burg_modified_FLP.c
bwexpander_32.c
bwexpander.c
bwexpander_FLP.c
celt.c
celt_decoder.c
celt_encoder.c
celt_lpc.c
check_control_input.c
CNG.c
code_signs.c
control_audio_bandwidth.c
control_codec.c
control_SNR.c
corrMatrix_FIX.c
corrMatrix_FLP.c
cwrs.c
debug.c
dec_API.c
decode_core.c
decode_frame.c
decode_indices.c
decode_parameters.c
decode_pitch.c
decode_pulses.c
decoder_set_fs.c
enc_API.c
encode_frame_FIX.c
encode_frame_FLP.c
encode_indices.c
encode_pulses.c
energy_FLP.c
entcode.c
entdec.c
entenc.c
find_LPC_FIX.c
find_LPC_FLP.c
find_LTP_FIX.c
find_LTP_FLP.c
find_pitch_lags_FIX.c
find_pitch_lags_FLP.c
find_pred_coefs_FIX.c
find_pred_coefs_FLP.c
gain_quant.c
HP_variable_cutoff.c
init_decoder.c
init_encoder.c
inner_prod_aligned.c
inner_product_FLP.c
interpolate.c
k2a_FIX.c
k2a_FLP.c
k2a_Q16_FIX.c
kiss_fft.c
laplace.c
levinsondurbin_FLP.c
lin2log.c
log2lin.c
LPC_analysis_filter.c
LPC_analysis_filter_FLP.c
LPC_inv_pred_gain.c
LPC_inv_pred_gain_FLP.c
LP_variable_cutoff.c
LTP_analysis_filter_FIX.c
LTP_analysis_filter_FLP.c
LTP_scale_ctrl_FIX.c
LTP_scale_ctrl_FLP.c
mathops.c
mdct.c
mlp.c
mlp_data.c
modes.c
NLSF2A.c
NLSF_decode.c
NLSF_del_dec_quant.c
NLSF_encode.c
NLSF_stabilize.c
NLSF_unpack.c
NLSF_VQ.c
NLSF_VQ_weights_laroia.c
noise_shape_analysis_FIX.c
noise_shape_analysis_FLP.c
NSQ.c
NSQ_del_dec.c
opus.c
opus_compare.c
opus_custom_demo.c
opus_decoder.c
opus_demo.c
opus_encoder.c
opus_multistream.c
opus_multistream_decoder.c
opus_multistream_encoder.c
pitch_analysis_core_FIX.c
pitch_analysis_core_FLP.c
pitch.c
pitch_est_tables.c
PLC.c
prefilter_FIX.c
prefilter_FLP.c
process_gains_FIX.c
process_gains_FLP.c
process_NLSFs.c
quant_bands.c
quant_LTP_gains.c
rate.c
regularize_correlations_FIX.c
regularize_correlations_FLP.c
repacketizer.c
repacketizer_demo.c
resampler.c
resampler_down2_3.c
resampler_down2.c
resampler_private_AR2.c
resampler_private_down_FIR.c
resampler_private_IIR_FIR.c
resampler_private_up2_HQ.c
resampler_rom.c
residual_energy16_FIX.c
residual_energy_FIX.c
residual_energy_FLP.c
scale_copy_vector_FLP.c
scale_vector_FLP.c
schur64_FIX.c
schur_FIX.c
schur_FLP.c
shell_coder.c
sigm_Q15.c
solve_LS_FIX.c
solve_LS_FLP.c
sort.c
sort_FLP.c
stereo_decode_pred.c
stereo_encode_pred.c
stereo_find_predictor.c
stereo_LR_to_MS.c
stereo_MS_to_LR.c
stereo_quant_pred.c
sum_sqr_shift.c
table_LSF_cos.c
tables_gain.c
tables_LTP.c
tables_NLSF_CB_NB_MB.c
tables_NLSF_CB_WB.c
tables_other.c
tables_pitch_lag.c
tables_pulses_per_block.c
VAD.c
vector_ops_FIX.c
vq.c
VQ_WMat_EC.c
warped_autocorrelation_FIX.c
warped_autocorrelation_FLP.c
wrappers_FLP.c

    )
