
add_library(pe_bliss
                        entropy.cpp
                        file_version_info.cpp
                        message_table.cpp
                        pe_base.cpp
                        pe_bound_import.cpp
                        pe_checksum.cpp
                        pe_debug.cpp
                        pe_directory.cpp
                        pe_dotnet.cpp
                        pe_exception.cpp
                        pe_exception_directory.cpp
                        pe_exports.cpp
                        pe_factory.cpp
                        pe_imports.cpp
                        pe_load_config.cpp
                        pe_properties.cpp
                        pe_properties_generic.cpp
                        pe_rebuilder.cpp
                        pe_relocations.cpp
                        pe_resource_manager.cpp
                        pe_resources.cpp
                        pe_resource_viewer.cpp
                        pe_rich_data.cpp
                        pe_section.cpp
                        pe_tls.cpp
                        resource_bitmap_reader.cpp
                        resource_bitmap_writer.cpp
                        resource_cursor_icon_reader.cpp
                        resource_cursor_icon_writer.cpp
                        resource_data_info.cpp
                        resource_message_list_reader.cpp
                        resource_string_table_reader.cpp
                        resource_version_info_reader.cpp
                        resource_version_info_writer.cpp
                        utils.cpp
                        version_info_editor.cpp
                        version_info_viewer.cpp)

#target_link_libraries(mongoose pthread wsock32)
